Fixed bug which can cause crash in contact model.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,7 @@
             android:name=".info.mvp.article.activity.ArticleActivity"
             android:launchMode="singleTask" />
         <activity
-            android:name=".info.mvp.news.activity.NewsDetailActivity"
-            android:launchMode="singleTask" />
+            android:name=".info.mvp.news.activity.NewsDetailActivity" />
         <activity
             android:name=".info.mvp.photo.activity.PhotoDetailActivity"
             android:launchMode="singleTask" />
