--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
         android:name=".ui.application.mApp"
@@ -160,8 +161,9 @@
         <activity
             android:name=".tool.mvp.qrcode.activity.QRCodeResultActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".tool.mvp.morse.activity.MorseActivity"
-            android:launchMode="singleTask"/>
+        <activity
+            android:name=".tool.mvp.morse.activity.MorseActivity"
+            android:launchMode="singleTask" />
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
