--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.2'
     compile 'com.aurelhubert:ahbottomnavigation:1.5.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
+    compile 'com.github.dongjunkun:CouponView:1.0.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
