Fixed some nullpoint bug.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.aurelhubert:ahbottomnavigation:1.5.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
     compile 'com.github.dongjunkun:CouponView:1.0.4'
+    compile 'com.github.sundeepk:compact-calendar-view:1.9.2-beta'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
