--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,7 +164,8 @@
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
-        <activity android:name=".tool.mvp.calendar.activity.CalendarActivity"></activity>
+        <activity android:name=".tool.mvp.calendar.activity.CalendarActivity"
+            android:launchMode="singleTask" />
     </application>
 
 </manifest>
