--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     })
     compile files('libs/httpclient-4.2.5.jar')
     compile files('libs/httpcore-4.2.4.jar')
+    compile files('lib/litepal-1.3.0-src.jar')
     compile project(path: ':cropper')
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
