--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:name=".info.mvp.photo.activity.PhotoDetailActivity"
             android:launchMode="singleTask" />
         <activity
-            android:name=".info.mvp.photo.activity.PhotoDetailNoBarActivity"
+            android:name=".info.mvp.photo.activity.PhotoGalleryActivity"
             android:launchMode="singleTask" />
         <activity
             android:name=".info.mvp.novel.activity.NovelListActivity"
