--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile files('lib/litepal-1.3.0-src.jar')
     compile project(path: ':cropper')
     compile files('libs/open_sdk_r5793_lite.jar')
+    compile "com.android.support.test.espresso:espresso-core:2.2.2"
+    compile "com.android.support.test.espresso:espresso-idling-resource:2.2.2"
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
