--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,27 @@ android {
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            assets.srcDir "assets"
+        }
+    }
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
     }
 }
 
@@ -35,7 +50,7 @@ dependencies {
     })
     compile files('libs/httpclient-4.2.5.jar')
     compile files('libs/httpcore-4.2.4.jar')
-    compile files('lib/litepal-1.3.0-src.jar')
+    compile files('libs/litepal-1.3.0-src.jar')
     compile project(path: ':cropper')
     compile files('libs/open_sdk_r5793_lite.jar')
     compile "com.android.support.test.espresso:espresso-core:2.2.2"
