--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,7 +120,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".info.mvp.comic.activity.ChapterActivity"
+            android:name=".info.mvp.comic.activity.SortActivity"
             android:launchMode="singleTask" />
         <activity
             android:name=".info.mvp.page.activity.PagerActivity"
