--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,21 +62,22 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'org.jsoup:jsoup:1.10.1'
-    compile 'net.steamcrafted:load-toast:1.0.10'
-    compile 'com.github.garretyoder:Colorful:1.1'
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
-    compile 'com.instabug.library:instabug:4.2.0'
-    compile 'com.lguipeng.bubbleview:library:1.0.0'
-    compile 'com.google.zxing:core:3.2.1'
-    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.2'
     compile 'com.aurelhubert:ahbottomnavigation:1.5.1'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
+    compile 'com.github.garretyoder:Colorful:1.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
     compile 'com.github.sundeepk:compact-calendar-view:1.9.2-beta'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.instabug.library:instabug:4.2.0'
+    compile 'org.jsoup:jsoup:1.10.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
+    compile 'com.lguipeng.bubbleview:library:1.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'net.steamcrafted:load-toast:1.0.10'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
